# CppMandleBrotProject

./: CMakeLists.txt  README.md
src/: Mandlebrot.cpp  Mandlebrot.h  Window.h  main.cpp
